add/edit heder and nav

--- a/src/pug/modules/header/header.pug
+++ b/src/pug/modules/header/header.pug
@@ -2,3 +2,11 @@ header
   .wrapper
     .containers
       .hederLogo
+        .sibLogo
+          img(src='imgs/sibcomp.svg', alt='Smiley face')
+        .sibInfo
+          p Наш телефон:
+          strong
+            i.fas.fa-phone-square
+            | 8 (923) 390 36 66</br>
+          small c 9:00 до 21:00
