--- a/src/pug/modules/nav/nav.pug
+++ b/src/pug/modules/nav/nav.pug
@@ -1,4 +1,44 @@
 nav
-    .wrapper
-        .containers
-            .navMenu
+    .wrpMenu 
+        .mainMenu
+            label.show-menu(for='show-menu')
+                | Меню 
+                i.fas.fa-caret-down
+            input#show-menu(type='checkbox', role='button')
+            ul#menu
+                li
+                    a(href='index.html') Домой
+                li
+                    a(href='news.html') Новости
+                li
+                    a(href='services.html')
+                        | Ремонт 
+                        i.fas.fa-caret-down
+                    ul.hidden
+                        li
+                            a(href='services.html') Компьютеров
+                        li
+                            a(href='services.html') Ноутбуков
+                        li
+                            a(href='mobile.html') Смартфонов
+                        li
+                            a(href='mobile.html') Планшетов
+                li
+                    a(href='#')
+                        | Настройка 
+                        i.fas.fa-caret-down
+                    ul.hidden
+                        li
+                            a(href='services_home_net.html') Домашние сети
+                        li
+                            a(href='services_tv.html') ТВ/Аудио
+                        li
+                            a(href='services_console.html') Приставки (Xbox/PS4)
+                        li
+                            a(href='services_program.html') Установка ПО
+                li
+                    a(href='#') Диагностика
+                li
+                    a(href='price.html') Прайс-лист
+                li
+                    a(href='contact.html') Контакты
