--- a/src/pug/modules/nav/nav.sass
+++ b/src/pug/modules/nav/nav.sass
@@ -1,5 +1,84 @@
-nav .wrapper
-    background-color: #003d33
+.wrpMenu 
+	width: 100% 
+	background-color: #172C33 
 
-.navMenu
-    height: 20px
+.mainMenu 
+	width: 1170px 
+	height: 40px 
+	margin: auto 
+ul 
+	list-style-type: none 
+	margin: 0 
+	padding: 0 
+	position: absolute 
+li 
+	display: inline-block 
+	float: left 
+	margin-right: 1px 
+	a 
+		display: block 
+		min-width: 140px 
+		height: 40px 
+		text-align: center 
+		line-height: 40px 
+		color: #fff 
+		background: #172C33 
+		text-decoration: none 
+	&:hover 
+		a 
+			background: #405860 
+		ul 
+			a 
+				background: #f3f3f3 
+				color: #415258 
+				height: 40px 
+				line-height: 40px 
+				&:hover 
+					background: #405860 
+					color: #fff 
+	ul 
+		display: none 
+		li 
+			display: block 
+			float: none 
+			a 
+				width: auto 
+				min-width: 100px 
+				padding: 0 20px 
+ul li a:hover + .hidden, .hidden:hover 
+	display: block 
+.show-menu 
+	text-decoration: none 
+	color: #fff 
+	background: #172C33 
+	text-align: center 
+	padding: 10px 0 
+	border-bottom: 1px solid #414F54 
+	display: none 
+input[type=checkbox] 
+	display: none 
+input[type=checkbox]:checked 
+	& ~ #menu 
+		display: block 
+
+@media (max-width: 767.98px)
+	.mainMenu 
+		width: 100% 
+		height: auto 
+	ul 
+		position: static 
+		display: none 
+	li 
+		border-bottom: 1px solid #414F54 
+	ul li, li a 
+		width: 100% 
+	.show-menu 
+		display: block 
+
+@media (min-width: 767px) and (max-width: 1199.98px)
+	.mainMenu 
+		width: 100% 
+	li 
+		a 
+			display: block 
+			min-width: 110px 
