--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -1,8 +1,8 @@
 @import "_mixins/font-face"
 
-+font-face("lato-font", "../font/Lato-Regular/Lato-Regular")
-+font-face("lato-heavy", "../font/Lato-Heavy/Lato-Heavy")
-+font-face("lato-bold", "../font/lato-bold/lato-bold")
++font-face("lato-font", "/fonts/Lato-Regular/Lato-Regular")
++font-face("lato-heavy", "/fonts/Lato-Regular/Lato-Heavy")
++font-face("lato-bold", "/fonts/Lato-Regular/lato-bold")
 
 
 
