--- a/src/pug/modules/header/header.sass
+++ b/src/pug/modules/header/header.sass
@@ -26,6 +26,11 @@ header
     p
         margin-bottom: 4px
 
+.fa-phone-square 
+	&:before 
+		content: "\f098" 
+		padding-right: 15px
+
 @media (min-width: 767px) and (max-width: 1199.98px)
     header .containers
         width: 100%
