--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -12,6 +12,10 @@ body
     // position: relative
     background-color: #fff
     
+.content
+    width: 100%
+    position: absolute
+    z-index: -1000
 // .body2
 //     width: 100%
 //     position: absolute
@@ -42,4 +46,6 @@ a
 @import "../pug/modules/header/header"
 @import "../pug/modules/nav/nav"
 
+
 @import "../pug/style/index"
+@import "../pug/modules/carusel/carusel"
