--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,7 +4,7 @@ extends layouts/home
 
 block content
 	.containers
-		p Cillum aliquip dolor adipisicing voluptate aliqua labore veniam officia pariatur ex mollit aliqua commodo ipsum.
+		include ./modules/carusel/carusel
 
-block body_end
-	script(type="text/javascript" src="/js/script.js")
+//- block body_end
+	//- script(type="text/javascript" src="/js/script.js")
