--- a/src/pug/modules/carusel/carusel.pug
+++ b/src/pug/modules/carusel/carusel.pug
@@ -1,8 +1,9 @@
-section
-    .wrpCarusel
-        .wrpCarusel-flex
-            .contentL
-                h1 Диагностика и Ремонт Вашего Компьютера
-                p Если Вам нужен ремонт компьютера или ноутбука, настройка или установка программного обеспечения, обращайтесь.
-            .contentR
-                img(src='imgs/sibcomp_carusel3.jpg', alt='SibComp Hardware')
+section.carusel
+    .containers
+        .wrpCarusel
+            .wrpCarusel-flex
+                .contentL
+                    h1 Диагностика и Ремонт Вашего Компьютера
+                    p Если Вам нужен ремонт компьютера или ноутбука, настройка или установка программного обеспечения, обращайтесь.
+                .contentR
+                    img(src='imgs/sibcomp_carusel3.jpg', alt='SibComp Hardware')
