--- a/src/pug/modules/carusel/carusel.sass
+++ b/src/pug/modules/carusel/carusel.sass
@@ -1,7 +1,8 @@
-// .caruselB
-//     width: 100%
-//     // position: absolute
-//     // z-index: -1000
+.carusel
+    width: 100%
+    // position: absolute
+    // z-index: -1000
+    background-color: #007ea7
 
 .wrpCarusel
     width: 100%
@@ -38,11 +39,11 @@
     justify-content: center
 
 @media (min-width: 767px) and (max-width: 1199.98px)
-    .containerCarusel
+    .carusel .containers
         width: 100%
 
 @media (max-width: 767.98px)
-    .containerCarusel
+    .carusel .containers
         width: 100%
     .wrpCarusel-flex
         flex-direction: column
