add block in index

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,6 +4,10 @@ extends layouts/home
 
 block content
 	include ./modules/carusel/carusel
+	include ./modules/nextblock/nextblock
+	include ./modules/news/news
+	include ./modules/about/about
+	include ./modules/footer/footer
 
 //- block body_end
 	//- script(type="text/javascript" src="/js/script.js")
