--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -9,9 +9,9 @@
 body
     font-family: $default-font
     min-width: 320px
-    // position: relative
-    background-color: #fff
-    
+    background-color: #eeeeee
+    // position: relative    
+
 .content
     width: 100%
     position: absolute
@@ -40,12 +40,13 @@ a
 .wrapper
     width: 100%
 
-// .content
-//     background-color: #fff
-
 @import "../pug/modules/header/header"
 @import "../pug/modules/nav/nav"
 
 
 @import "../pug/style/index"
 @import "../pug/modules/carusel/carusel"
+@import "../pug/modules/nextblock/nextblock2"
+@import "../pug/modules/news/news"
+@import "../pug/modules/about/about"
+@import "../pug/modules/footer/footer"
