--- a/src/pug/modules/carusel/carusel.pug
+++ b/src/pug/modules/carusel/carusel.pug
@@ -1,9 +1,8 @@
 section.carusel
-    .containers
-        .wrpCarusel
-            .wrpCarusel-flex
-                .contentL
-                    h1 Диагностика и Ремонт Вашего Компьютера
-                    p Если Вам нужен ремонт компьютера или ноутбука, настройка или установка программного обеспечения, обращайтесь.
-                .contentR
-                    img(src='imgs/sibcomp_carusel3.jpg', alt='SibComp Hardware')
+    .wrapper
+        .containers
+            .contentL
+                h1 Диагностика и Ремонт Вашего Компьютера
+                p Если Вам нужен ремонт компьютера или ноутбука, настройка или установка программного обеспечения, обращайтесь.
+            .contentR
+                img(src='imgs/sibcomp_carusel3.jpg', alt='SibComp Hardware')
