--- a/src/pug/modules/carusel/carusel.sass
+++ b/src/pug/modules/carusel/carusel.sass
@@ -1,26 +1,17 @@
 .carusel
-    width: 100%
-    // position: absolute
-    // z-index: -1000
-    background-color: #007ea7
-
-.wrpCarusel
-    width: 100%
-    padding-top: 16px
-    background-color: #007ea7
-    margin-bottom: 32px 
-
-.containerCarusel
-    width: 1170px
-    // height: 200px
-    padding-right: 15px
-    padding-left: 15px
-    margin-right: auto
-    margin-left: auto
-
-.wrpCarusel-flex
-    display: flex
-    flex-direction: row
+    .wrapper
+        width: 100%
+        // position: absolute
+        // z-index: -1000
+        background-color: #007ea7
+        padding-top: 16px
+        margin-bottom: 32px 
+    .containers
+        display: flex
+        flex-direction: row
+// .wrpCarusel-flex
+//     display: flex
+//     flex-direction: row
 
 .contentL
     display: flex
@@ -38,15 +29,10 @@
     display: flex
     justify-content: center
 
-@media (min-width: 767px) and (max-width: 1199.98px)
-    .carusel .containers
-        width: 100%
-
 @media (max-width: 767.98px)
-    .carusel .containers
-        width: 100%
-    .wrpCarusel-flex
-        flex-direction: column
+    .carusel
+        .containers
+            flex-direction: column
     .contentL
         text-align: center
     .contentR img
