--- a/src/pug/modules/news/news.pug
+++ b/src/pug/modules/news/news.pug
@@ -1,22 +1,23 @@
-section.newsWrap
-    .containerNextBlock
-        .newsZagolovok
-            h1 
-                i.fas.fa-angle-double-right 
-                | Новости
-        .triBlockFlex
-            .block
-                small 22 сентября 2018
-                p
-                    span.newsfat Наши планы
-                p В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
-            .block
-                small 18 сентября 2018
-                p
-                    span.newsfat "БАБУЛЕНЬКА НА СВЯЗИ"
-                p В век современных технологий невозможно представить свою повседневную жизнь без мобильной связи. Нередко встречаются ситуации, когда близкие люди могут поддерживать общение только при помощи сети Интернет.
-            .block
-                small 26 августа 2018
-                p
-                    span.newsfat Открытие нашего сайта.
-                p Вот и свершилось долгожданное событие: запуск нашего сайта, ура!
+section.news
+    .wrapper
+        .containers
+            .newsZagolovok
+                h1 
+                    i.fas.fa-angle-double-right 
+                    | Новости
+            .triBlockFlex
+                .block
+                    small 22 сентября 2018
+                    p
+                        span.newsfat Наши планы
+                    p В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
+                .block
+                    small 18 сентября 2018
+                    p
+                        span.newsfat "БАБУЛЕНЬКА НА СВЯЗИ"
+                    p В век современных технологий невозможно представить свою повседневную жизнь без мобильной связи. Нередко встречаются ситуации, когда близкие люди могут поддерживать общение только при помощи сети Интернет.
+                .block
+                    small 26 августа 2018
+                    p
+                        span.newsfat Открытие нашего сайта.
+                    p Вот и свершилось долгожданное событие: запуск нашего сайта, ура!
