--- a/src/pug/modules/nextblock/nextblock2.sass
+++ b/src/pug/modules/nextblock/nextblock2.sass
@@ -1,14 +1,17 @@
-.wrpNextBlock 
-    width: 100%
+.nextblock
     margin-bottom: 32px
+    
+    // .wrpNextBlock 
+//     width: 100%
+//     margin-bottom: 32px
 	
-.containerNextBlock
-	max-width: 1170px 
-	padding-right: 15px 
-	padding-left: 15px 
-	margin-right: auto 
-	margin-left: auto 
-	overflow: hidden
+// .containerNextBlock
+// 	max-width: 1170px 
+// 	padding-right: 15px 
+// 	padding-left: 15px 
+// 	margin-right: auto 
+// 	margin-left: auto 
+// 	overflow: hidden
 .zagolovok
     margin-bottom: 16px
     // font-size: 32px
@@ -25,6 +28,7 @@
 .triBlockFlex
     display: flex
     justify-content: space-between
+
 .block
     padding-top: 16px
     padding-left: 15px
