--- a/src/pug/modules/nextblock/nextblock2.sass
+++ b/src/pug/modules/nextblock/nextblock2.sass
@@ -1,20 +1,8 @@
 .nextblock
     margin-bottom: 32px
     
-    // .wrpNextBlock 
-//     width: 100%
-//     margin-bottom: 32px
-	
-// .containerNextBlock
-// 	max-width: 1170px 
-// 	padding-right: 15px 
-// 	padding-left: 15px 
-// 	margin-right: auto 
-// 	margin-left: auto 
-// 	overflow: hidden
 .zagolovok
     margin-bottom: 16px
-    // font-size: 32px
     color: $text
     h1
         font-size: 32px
@@ -53,9 +41,13 @@
 
 
 @media (min-width: 767px) and (max-width: 1199.98px)
+    .triBlockFlex 
+        a:nth-child(2)
+            margin-left: 15px
+            margin-right: 15px
     .block
-        align-items: center
-        width: 95%
+        width: 100%
+        height: 100%
 
 @media (max-width: 767.98px)
     .triBlockFlex
