--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -51,6 +51,8 @@ a
 @import "../pug/modules/about/about"
 @import "../pug/modules/footer/footer"
 
+@import "../pug/modules/news/news2"
+
 
 @media (min-width: 767px) and (max-width: 1199.98px)
     .containers
