add new breadcrumb2

--- a/src/pug/modules/news/news2.pug
+++ b/src/pug/modules/news/news2.pug
@@ -3,6 +3,6 @@ include ../../mixins/breadcrumbs2
 section.news2
     .wrapper
         .containers
-            +breadcrumb([["Home", "/home.html"], ["About", "/about.html"], ["Contact", "/contact.html"]])
+            +breadcrumb([['Домой', '/index.html'], ['Новости']])
 
 
