--- a/src/pug/mixins/breadcrumbs2.pug
+++ b/src/pug/mixins/breadcrumbs2.pug
@@ -1,16 +1,21 @@
+
 mixin breadcrumb(levels)
 
-    nav(aria-label="breadcrumb")
-        ol.breadcrumb(itemscope itemtype="http://schema.org/BreadcrumbList")      
-            each level, index in levels
-                - var count = index+1
+  nav.breadcrumbs(aria-label="breadcrumb")
+    .container
+      ul.breadcrumb
 
-                li.breadcrumb__item(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
-                    a(href="#{level[1]}" aria-level!=count)
-                        span(itemprop="name") #{level[0]}
+        each item, index in levels
+          - var count = index+1
+          - var name = item[0]
+          - var link = item[1] || null
 
+          li
+            if link
+              a(href=link aria-level!=count)
+                span(itemprop="name") #{name}
+            else
+              span(itemprop="name") #{name}
 
-                    if count < levels.length
-                        i.breadcrumb__symbol(aria-hidden="true")
-                    meta(itemprop="position" content!=count)
-    
+            if count < levels.length
+              i.fa.fa-angle-right(aria-hidden="true")
