--- a/src/pug/modules/news/news2.sass
+++ b/src/pug/modules/news/news2.sass
@@ -1,25 +1,10 @@
 .news2
-    margin-top: 32px 
+    margin-top: 32px
+    font-family: $default-font
     
-// ul.breadcrumb
-//     // padding: 10px 16px 
-//     list-style: none 
-//     // background-color: #eee 
-//     li 
-//         display: inline 
-//         // font-size: 18px 
-//         & + li 
-//             i 
-//                 padding: 8px 
-//                 color: black 
-//                 // content: "/\00a0" 
-//         a 
-//             color: #0275d8 
-//             text-decoration: none 
-//             &:hover 
-//                 color: #007ea7
 ul.breadcrumb
     list-style: none
+    padding-bottom: 16px
     li
         display: inline 
         a 
@@ -30,3 +15,20 @@ ul.breadcrumb
         i 
             padding-right: 10px
             padding-left: 10px
+
+.newsFlex
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    padding-top: 16px
+    height: 100vh
+    background-color: #fff
+
+.shortNewsBlock
+    display: flex
+    padding-top: 32px    
+    img 
+        width: 100px
+        height: 100px
+    .newsTitle
+        padding-left: 15px
