add news block, imgs

--- a/src/pug/modules/news/news2.sass
+++ b/src/pug/modules/news/news2.sass
@@ -23,7 +23,10 @@ ul.breadcrumb
     padding-top: 16px
     height: 100vh
     background-color: #fff
-
+.newsL
+    width: 770px
+.newsR
+    width: 370px
 .shortNewsBlock
     display: flex
     padding-top: 32px    
@@ -32,3 +35,14 @@ ul.breadcrumb
         height: 100px
     .newsTitle
         padding-left: 15px
+        i 
+            padding-right: 5px
+            padding-bottom: 16px
+
+@media (max-width: 767.98px)
+    .newsFlex
+        flex-direction: column
+    .newsL
+        width: 100%
+    .newsR
+        width: 100%
