--- a/src/pug/modules/news/news2.pug
+++ b/src/pug/modules/news/news2.pug
@@ -18,6 +18,28 @@ section.news2
                             | 22 сентября 2018
                         p
                             | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
+                .shortNewsBlock
+                    .newsImage
+                        img(src='imgs/news.png', alt='News Image')   
+                    .newsTitle
+                        h2 Ближайшее планы
+                        small
+                            i.far.fa-calendar-alt
+                            | 22 сентября 2018
+                        p
+                            | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
+                .shortNewsBlock
+                    .newsImage
+                        img(src='imgs/news.png', alt='News Image')   
+                    .newsTitle
+                        h2 Ближайшее планы
+                        small
+                            i.far.fa-calendar-alt
+                            | 22 сентября 2018
+                        p
+                            | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
                 
             .newsR
+                img(src='/imgs/0.png', alt='news')
+                img(src='/imgs/1.png', alt='news')
 
