--- a/src/pug/modules/news/news2.sass
+++ b/src/pug/modules/news/news2.sass
@@ -21,12 +21,14 @@ ul.breadcrumb
     flex-direction: row
     justify-content: space-between
     padding-top: 16px
-    height: 100vh
+    // height: 100vh
     background-color: #fff
 .newsL
     width: 770px
 .newsR
     width: 370px
+    display: flex
+    flex-direction: column
 .shortNewsBlock
     display: flex
     padding-top: 32px    
@@ -46,3 +48,7 @@ ul.breadcrumb
         width: 100%
     .newsR
         width: 100%
+        display: flex
+        justify-content: center
+        flex-direction: column
+        align-items: center
