Add services block

--- a/src/pug/services.pug
+++ b/src/pug/services.pug
@@ -1,5 +1,5 @@
 extends layouts/home
 
 block content
-    include ./modules/news/news2
+    include ./modules/services/services
     include ./modules/footer/footer
