--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -52,6 +52,7 @@ a
 @import "../pug/modules/footer/footer"
 
 @import "../pug/modules/news/news2"
+@import "../pug/modules/services/services"
 
 
 @media (min-width: 767px) and (max-width: 1199.98px)
