add services block info

--- a/src/pug/modules/services/services.pug
+++ b/src/pug/modules/services/services.pug
@@ -4,3 +4,23 @@ section.services
     .wrapper
         .containers
             +breadcrumb([['Домой', '/index.html'], ['Ремонт']])
+    .wrapper
+        .containers.newsFlex
+            .newsL
+                h1 РЕМОНТ И НАСТРОЙКА КОМПЬЮТЕРНОЙ ТЕХНИКИ:
+                p В век современных технологий невозможно представить свою повседневную жизнь без компьютера. Однако технические проблемы ПК не являются редкостью. Очень важным в выбор сервиса по ремонту компьютеров является уровень профессионализма, с которым подходит компания к выполнению своей работы. В нашей компании весь процесс осуществляется опытными специалистами, которым под силу справиться с задачей любой сложности. Мы предлагаем услуги по ремонту компьютеров. Если у вас возникли вопросы, связанные с ремонтом ПК, или вы хотите получить профессиональную консультацию, сотрудники нашей компании с удовольствием ответят на все интересующие вас вопросы.
+                h2 Услуги:
+                ul.servicesList
+                    li Восстановление работы Операционной системы (Windows XP/7/8/10).
+                    li Обновление/восстановление BIOS материнской платы.
+                    li Чистка системного блока от пыли, смазывание вентиляторов.
+                    li Лечение от компьютерных вирусов.
+                    li Сборка ПК.
+                    li Установка Windows XP/7/8/10.
+                    li Установка Программного обеспечения.
+                    li Установка Антивируса.
+                    li Установка Офисных приложение.
+                    li Настройка Wi-Fi соединения.
+            .newsR
+                img(src='/imgs/0.png', alt='news')
+                img(src='/imgs/1.png', alt='news')        
