--- a/src/pug/modules/services/services.sass
+++ b/src/pug/modules/services/services.sass
@@ -15,3 +15,11 @@ ul.breadcrumb
         i 
             padding-right: 10px
             padding-left: 10px
+
+.servicesList
+    list-style: none
+    li:before
+        font-family: FontAwesome
+        content: "\f105"
+        padding-right: 10px
+        
