--- a/src/pug/modules/nav/nav.pug
+++ b/src/pug/modules/nav/nav.pug
@@ -24,7 +24,7 @@ nav
                         li
                             a(href='mobile.html') Планшетов
                 li
-                    a(href='#')
+                    a(href='tune-up.html')
                         | Настройка 
                         i.fas.fa-caret-down
                     ul.hidden
