--- a/src/sass/_vars2.sass
+++ b/src/sass/_vars2.sass
@@ -9,7 +9,7 @@
 html
     font-family: $default-font
     font-size: $fontsize
-    // line-height: 1
+    // line-height: 1.444em
     box-sizing: border-box
 span 
     font-family: $title-font
