--- a/src/pug/modules/services/services.sass
+++ b/src/pug/modules/services/services.sass
@@ -1,6 +1,11 @@
 .services
     margin-top: 32px
     font-family: $default-font
+    p 
+        line-height: 1.4em
+    h1 
+        text-transform: uppercase
+        padding-bottom: 16px
 
 ul.breadcrumb
     list-style: none
@@ -18,6 +23,7 @@ ul.breadcrumb
 
 .servicesList
     list-style: none
+    line-height: 1.4em
     li:before
         font-family: FontAwesome
         content: "\f105"
