--- a/src/pug/layouts/services.pug
+++ b/src/pug/layouts/services.pug
@@ -15,7 +15,8 @@ html
   body
     include ../modules/header/header
     include ../modules/nav/nav
-
+    .content
+      block content
 		
     script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
     block body_end
