--- a/src/pug/modules/nav/nav.pug
+++ b/src/pug/modules/nav/nav.pug
@@ -37,7 +37,7 @@ nav
                         li
                             a(href='services_program.html') Установка ПО
                 li
-                    a(href='#') Статьи
+                    a(href='articles.html') Статьи
                 li
                     a(href='price.html') Прайс-лист
                 li
