--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -52,6 +52,7 @@ a
 @import "../pug/modules/footer/footer"
 
 @import "../pug/modules/news/news2"
+@import "../pug/modules/articles/articles"
 @import "../pug/modules/services/services"
 
 
