add/edit  articles block

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -54,6 +54,7 @@ a
 @import "../pug/modules/news/news2"
 @import "../pug/modules/articles/articles"
 @import "../pug/modules/services/services"
+@import "../pug/modules/articles/articles"
 
 
 @media (min-width: 767px) and (max-width: 1199.98px)
