--- a/src/pug/modules/articles/articles.pug
+++ b/src/pug/modules/articles/articles.pug
@@ -18,7 +18,7 @@ section.news2
                             | 28 Декабря 2019
                         p
                             | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное. 
-                        a(href='/articles/pc-build-december-2019.html') Далее
+                        a(href='/articles01.html') Далее
                 
             .newsR
                 img(src='/imgs/0.png', alt='news')
