--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -6,7 +6,7 @@ section.news2
             +breadcrumb([['Домой', '/index.html'], ['Статьи', '/articles.html'], ['ПК сборка за декабрь 2019']])
     .wrapper
         .containers.newsFlex
-            .artcicles
+            .newsL
                 h1 ПК сборка за декабрь 2019:                
                 .shortNewsBlock
                     .newsImage
@@ -19,4 +19,7 @@ section.news2
                         p
                             | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное. 
                         a(href='/articles/pc-build-december-2019.html') Далее
+            .newsR
+                img(src='/imgs/0.png', alt='news')
+                img(src='/imgs/1.png', alt='news')
 
