--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -54,6 +54,8 @@ a
 @import "../pug/modules/news/news2"
 @import "../pug/modules/articles/articles"
 @import "../pug/modules/services/services"
+@import "../pug/modules/contact/contact"
+@import "../pug/modules/price/price"
 @import "../pug/articles/articles-articles"
 
 
