--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,5 +9,4 @@ block content
 	include ./modules/about/about
 	include ./modules/footer/footer
 
-//- block body_end
-	//- script(type="text/javascript" src="/js/script.js")
+block body_end
