--- a/src/pug/layouts/home.pug
+++ b/src/pug/layouts/home.pug
@@ -9,6 +9,8 @@ html
     //- link(rel="stylesheet" href="/css/all.css") 
     //- link(rel="stylesheet" href="/css/font-awesome.css") 
     link(rel="stylesheet" href="/css/main.min.css") 
+    link(rel='stylesheet', href='css/slider.css')
+    script(type='text/javascript', src='js/modernizr.custom.28468.js')
     block head_end
 	
   body
@@ -17,5 +19,8 @@ html
     .content
       block content
 		
-    script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(type='text/javascript', src='js/jquery.cslider.js')
+    script(type='text/javascript', src='js/slider.js')
+
     block body_end
