--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -46,6 +46,7 @@ a
 
 @import "../pug/style/index"
 @import "../pug/modules/carusel/carusel"
+@import "../pug/modules/carusel/carusel02"
 @import "../pug/modules/nextblock/nextblock2"
 @import "../pug/modules/news/news"
 @import "../pug/modules/about/about"
