add contact icon

--- a/src/pug/modules/contact/contact.pug
+++ b/src/pug/modules/contact/contact.pug
@@ -7,7 +7,12 @@ section.news2
     .wrapper
         .containers.newsFlex
             .newsL
-                h1 Контакты:                 
+                h1 Контакты:
+                .socialIcon
+                    a(href='https://vk.com/sibcomp19')
+                        img(src='/imgs/vk.com.png')
+                    a(href='https://www.instagram.com/sibcomp19/')
+                        img(src='/imgs/instagram.png')
                 
             .newsR
                 img(src='/imgs/0.png', alt='news')
