--- a/src/pug/modules/news/news2.pug
+++ b/src/pug/modules/news/news2.pug
@@ -7,7 +7,7 @@ section.news2
     .wrapper
         .containers.newsFlex
             .newsL
-                h1 Новости:
+                h1 Новости:                
                 .shortNewsBlock
                     .newsImage
                         img(src='imgs/news.png', alt='News Image')   
@@ -15,27 +15,7 @@ section.news2
                         h2 Ближайшее планы
                         small
                             i.far.fa-calendar-alt
-                            | 22 сентября 2018
-                        p
-                            | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
-                .shortNewsBlock
-                    .newsImage
-                        img(src='imgs/news.png', alt='News Image')   
-                    .newsTitle
-                        h2 Ближайшее планы
-                        small
-                            i.far.fa-calendar-alt
-                            | 22 сентября 2018
-                        p
-                            | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
-                .shortNewsBlock
-                    .newsImage
-                        img(src='imgs/news.png', alt='News Image')   
-                    .newsTitle
-                        h2 Ближайшее планы
-                        small
-                            i.far.fa-calendar-alt
-                            | 22 сентября 2018
+                            | 14 января 2020
                         p
                             | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное.
                 
