--- a/src/pug/layouts/home.pug
+++ b/src/pug/layouts/home.pug
@@ -8,7 +8,7 @@ html
     link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     //- link(rel="stylesheet" href="/css/all.css") 
     //- link(rel="stylesheet" href="/css/font-awesome.css") 
-    link(rel="stylesheet" href="/css/main.min.css") 
+    link(rel="stylesheet" href="css/main.min.css") 
     link(rel='stylesheet', href='css/slider.css')
     script(type='text/javascript', src='js/modernizr.custom.28468.js')
     block head_end
