--- a/src/pug/layouts/services.pug
+++ b/src/pug/layouts/services.pug
@@ -9,7 +9,7 @@ html
     link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     //- link(rel="stylesheet" href="/css/all.css") 
     //- link(rel="stylesheet" href="/css/font-awesome.css") 
-    link(rel="stylesheet" href="/css/main.min.css") 
+    link(rel="stylesheet" href="css/main.min.css") 
     block head_end
 	
   body
