--- a/src/pug/layouts/home.pug
+++ b/src/pug/layouts/home.pug
@@ -14,12 +14,14 @@ html
     block head_end
 	
   body
+    include ../modules/preloader/preloader
     include ../modules/header/header
     include ../modules/nav/nav
     .content
       block content
 		
     script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(type='text/javascript', src='js/preloader.js')
     script(type='text/javascript', src='js/jquery.cslider.js')
     script(type='text/javascript', src='js/slider.js')
 
