--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -40,6 +40,7 @@ a
     margin-right: auto
     margin-left: auto
 
+@import '../pug/modules/preloader/preloader'
 @import "../pug/modules/header/header"
 @import "../pug/modules/nav/nav"
 
