--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -7,18 +7,14 @@ section.news2
     .wrapper
         .containers.newsFlex
             .newsL
-                h1 ПК сборка за декабрь 2019:                
+                h1 ПК сборка. Январь 2020:                
                 .shortNewsBlock
-                    .newsImage
-                        img(src='imgs/news.png', alt='News Image')   
                     .newsTitle
-                        h2 ПК Сборка. Декабрь 2019
-                        small
-                            i.far.fa-calendar-alt
-                            | 28 Декабря 2019
+                        h2 Вступление
                         p
-                            | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное. 
-                        a(href='/articles/pc-build-december-2019.html') Далее
+                            | “Сборка месяца” - это раздел, который несет исключительно рекомендательный характер. Все цены актуальны на момент написание обзора. Цены и название комплектующих взяты с сайта dns-shop.ru (г.Абакан).
+
+                        h3 Начальная сборка.
             .newsR
                 img(src='/imgs/0.png', alt='news')
                 img(src='/imgs/1.png', alt='news')
