edit/add some change

--- a/src/pug/modules/footer/footer.sass
+++ b/src/pug/modules/footer/footer.sass
@@ -15,22 +15,20 @@
     overflow: hidden
     display: flex
     justify-content: space-between
-    a 
-        display: block
+    a        
         color: #eeeeee
         text-decoration: none
         &:hover
-            text-decoration: none
-            display: block
+            text-decoration: none            
             color: #00A8E8
-            cursor: pointer
+            
 
 
 .blocTel    
     width: 270px
     text-align: right
     padding-right: 32px
-    & strong
+    strong
         display: block
         color: #00A8E8
         font-weight: bold
