--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -16,19 +16,27 @@ body
     width: 100%
     position: absolute
     z-index: -1000
-// .body2
-//     width: 100%
-//     position: absolute
-//     z-index: -1000
-
-// .fa, .fas
-// 	padding-left: 5px
-// .far
-//     padding-right: 5px
 
 a 
-	text-decoration: none 
-	// color: #007ea7
+    text-decoration: none 
+    color: #0275d8
+    &:hover 
+        color: #172C33
+
+
+ul.breadcrumb
+    list-style: none
+    padding-bottom: 16px
+    li
+        display: inline 
+        a 
+            color: #0275d8 
+            text-decoration: none 
+            &:hover 
+                color: #172C33
+        i 
+            padding-right: 10px
+            padding-left: 10px
 
 .wrapper
     width: 100%
