--- a/src/pug/layouts/services.pug
+++ b/src/pug/layouts/services.pug
@@ -5,10 +5,10 @@ html
     title= title
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1")
-    link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.2.0/css/all.css', integrity='sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ', crossorigin='anonymous')
-    link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
-    //- link(rel="stylesheet" href="/css/all.css") 
-    //- link(rel="stylesheet" href="/css/font-awesome.css") 
+    link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.2.0/css/all.css')
+    link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
+    link(rel="stylesheet" href="/css/all.css") 
+    link(rel="stylesheet" href="/css/font-awesome.css") 
     link(rel="stylesheet" href="css/main.min.css") 
     block head_end
 	
