--- a/src/pug/modules/carusel/carusel02.sass
+++ b/src/pug/modules/carusel/carusel02.sass
@@ -2,3 +2,18 @@
     padding-bottom: 16px
     .wrapper
         background-color: #007EA7
+
+@media (max-width: 767.98px)
+    .da-slide
+        h2 
+            text-align: center
+            font-size: 24px
+            top: 30px
+            // width: 40%
+        p 
+            text-align: center
+            font-size: 16px
+            top: 100px
+        img 
+            display: hidden
+            height: 50%
