--- a/src/pug/modules/nav/nav.pug
+++ b/src/pug/modules/nav/nav.pug
@@ -36,8 +36,8 @@ nav
                             a(href='services_console.html') Приставки (Xbox/PS4)
                         li
                             a(href='services_program.html') Установка ПО
-                //- li
-                //-     a(href='articles.html') Статьи
+                li
+                    a(href='articles.html') Статьи
                 li
                     a(href='price.html') Прайс-лист
                 li
