add font awesome

--- a/src/pug/modules/news/news2.sass
+++ b/src/pug/modules/news/news2.sass
@@ -32,6 +32,9 @@
 @media (max-width: 767.98px)
     .newsFlex
         flex-direction: column
+    .shortNewsBlock
+        .img
+            width: 50%
     .newsL
         width: 100%
     .newsR
