--- a/src/pug/modules/news/news2.sass
+++ b/src/pug/modules/news/news2.sass
@@ -33,8 +33,12 @@
     .newsFlex
         flex-direction: column
     .shortNewsBlock
-        .img
-            width: 50%
+        .newsImage
+            width: 60px
+            height: 60px
+            img
+                width: 60px
+                height: auto
     .newsL
         width: 100%
     .newsR
