--- a/src/pug/articles/articles-articles.sass
+++ b/src/pug/articles/articles-articles.sass
@@ -1,2 +1,31 @@
-.artcicles
+table
+    border-collapse: collapse
     width: 100%
+
+
+td, th 
+    border: 1px solid #dddddd
+    text-align: left
+    padding: 8px
+
+.tableHead
+    background-color: #b3b3e6
+tr:nth-child(even) 
+    background-color: #dddddd
+
+td:first-child
+    text-align: center
+
+.col1
+    width: 100px
+    font-weight: bold
+    color: #fff
+    background-color: #007EA7
+
+.col2
+    width: 110px
+    text-align: center
+
+.col3
+    width: 100px
+    text-align: center
