--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -15,6 +15,8 @@ section.news2
                             | “Сборка месяца” - это раздел, который несет исключительно рекомендательный характер. Все цены актуальны на момент написание обзора. Цены и название комплектующих взяты с сайта dns-shop.ru (г.Абакан).
 
                         h3 Начальная сборка.
+                    table.table
+
             .newsR
                 img(src='/imgs/0.png', alt='news')
                 img(src='/imgs/1.png', alt='news')
