edit article block

--- a/src/pug/articles/articles-articles.sass
+++ b/src/pug/articles/articles-articles.sass
@@ -1,6 +1,11 @@
+.pcMonth
+    margin-top: 32px
+    font-family: $default-font
+
 table
     border-collapse: collapse
     width: 100%
+    font-size: 14px
 
 
 td, th 
@@ -29,3 +34,7 @@ td:first-child
 .col3
     width: 100px
     text-align: center
+
+
+@media (min-width: 767px) and (max-width: 1199.98px)
+    .pcMonth
