--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -1,6 +1,6 @@
 include ../mixins/breadcrumbs2
 
-section.news2
+section.pcMonth
     .wrapper
         .containers
             +breadcrumb([['Домой', '/index.html'], ['Статьи', '/articles.html'], ['ПК сборка за декабрь 2019']])
@@ -8,13 +8,13 @@ section.news2
         .containers.newsFlex
             .newsL
                 h1 ПК сборка. Январь 2020:                
-                .shortNewsBlock
+                .shortNewsBlock2
                     .newsTitle
                         h2 Вступление
                         p
                             | “Сборка месяца” - это раздел, который несет исключительно рекомендательный характер. Все цены актуальны на момент написание обзора. Цены и название комплектующих взяты с сайта dns-shop.ru (г.Абакан).
 
-                        h3 Начальная сборка.
+                        h3 Начальная сборка:
                     table.table
 
             .newsR
