--- a/src/pug/modules/news/news2.sass
+++ b/src/pug/modules/news/news2.sass
@@ -18,12 +18,13 @@
     flex-direction: column
 .shortNewsBlock
     display: flex
-    flex-direction: column
-    padding-top: 32px    
+    flex-direction: row
+    padding-top: 32px
     img 
         width: 100px
         height: 100px
     .newsTitle
+        margin-left: 15px
         i 
             padding-right: 5px
             padding-bottom: 16px
