--- a/src/pug/articles/articles.sass
+++ b/src/pug/articles/articles.sass
@@ -1,6 +1,10 @@
 .pcMonth
-    margin-top: 32px
-    font-family: $default-font
+    margin-top: 16px
+.pcMonth2
+    .newsR
+        display: flex
+        justify-content: center
+        text-align: center
 
 table
     border-collapse: collapse
@@ -36,5 +40,18 @@ td:first-child
     text-align: center
 
 
+
 @media (min-width: 767px) and (max-width: 1199.98px)
     .pcMonth
+        .newsFlex
+            flex-direction: column
+            align-items: center
+            .newsL
+                width: 80%
+            .newsR
+                padding-top: 16px
+                display: flex
+                width: 100%
+                text-align: center
+                justify-content: center
+                align-items: center
