--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -63,11 +63,10 @@ ul.breadcrumb
 @import "../pug/modules/footer/footer"
 
 @import "../pug/modules/news/news2"
-@import "../pug/modules/articles/articles"
 @import "../pug/modules/services/services"
 @import "../pug/modules/contact/contact"
 @import "../pug/modules/price/price"
-@import "../pug/articles/articles-articles"
+@import "../pug/articles/articles"
 
 
 
