--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -14,8 +14,11 @@ section.pcMonth
                         p
                             | “Сборка месяца” - это раздел, который несет исключительно рекомендательный характер. Все цены актуальны на момент написание обзора. Цены и название комплектующих взяты с сайта dns-shop.ru (г.Абакан).
 
-                        h3 Начальная сборка:
-                    table.table
+                        h3 Начальная сборка (AMD):
+                        table.table
+                        
+                        h3 Начальная сборка (Intel):
+                        table.table1
 
             .newsR
                 img(src='/imgs/0.png', alt='news')
