--- a/src/pug/articles01.pug
+++ b/src/pug/articles01.pug
@@ -8,4 +8,5 @@ block content
   include ./modules/footer/footer
 
 block body_end
-  script(src='js/pc-db-01.js')
+  //- script(src='js/pc-db-01.js')
+  script(src='js/pc-db-01-01.js')
