--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -14,11 +14,21 @@ section.pcMonth
                         p
                             | “Сборка месяца” - это раздел, который несет исключительно рекомендательный характер. Все цены актуальны на момент написание обзора. Цены и название комплектующих взяты с сайта dns-shop.ru (г.Абакан).
 
+                        a(href='#ankor1') Начальная сборка (AMD)<br>
+                        a(href='#ankor2') Начальная сборка (Intel)<br>
+                        a(href='#ankor3') Базовая сборка (AMD)
+
                         h3 Начальная сборка (AMD):
-                        table.table
-                        
+                        table.table#ankor1
+                        .allcoast
+
                         h3 Начальная сборка (Intel):
-                        table.table1
+                        table.table1#ankor2
+                        .allcoast
+
+                        h3 Базовая сборка (AMD):
+                        table.table2#ankor3
+                        .allcoast3
 
             .newsR
                 img(src='/imgs/0.png', alt='news')
