--- a/src/pug/articles/articles.sass
+++ b/src/pug/articles/articles.sass
@@ -42,6 +42,14 @@ td:first-child
     width: 100px
     text-align: center
 
+.allcoast1, .allcoast2, .allcoast3, .allcoast4, .allcoast5, .allcoast6
+    text-align: right
+    padding-top: 8px
+    font-weight: bold
+    p:after
+        content: "\20BD"
+        padding-left: 7px
+
 
 
 @media (min-width: 767px) and (max-width: 1199.98px)
