--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -14,21 +14,41 @@ section.pcMonth
                         p
                             | “Сборка месяца” - это раздел, который несет исключительно рекомендательный характер. Все цены актуальны на момент написание обзора. Цены и название комплектующих взяты с сайта dns-shop.ru (г.Абакан).
 
-                        a(href='#ankor1') Начальная сборка (AMD)<br>
-                        a(href='#ankor2') Начальная сборка (Intel)<br>
-                        a(href='#ankor3') Базовая сборка (AMD)
+                        a(href='#ankor1') Начальная (AMD)<br>
+                        <br>
+                        a(href='#ankor2') Начальная (Intel)<br>
+                        <br>
+                        a(href='#ankor3') Базовая (AMD)<br>
+                        <br>
+                        a(href='#ankor4') Базовая (Intel)<br>
+                        <br>
+                        a(href='#ankor5') Оптимальная (AMD)<br>
+                        <br>
+                        a(href='#ankor6') Оптимальная (Intel)
 
-                        h3 Начальная сборка (AMD):
+                        h3 Начальная (AMD):
                         table.table#ankor1
-                        .allcoast
+                        .allcoast1
 
-                        h3 Начальная сборка (Intel):
+                        h3 Начальная (Intel):
                         table.table1#ankor2
-                        .allcoast
+                        .allcoast2
 
-                        h3 Базовая сборка (AMD):
+                        h3 Базовая (AMD):
                         table.table2#ankor3
                         .allcoast3
+
+                        h3 Базовая (Intel):
+                        table.table3#ankor4
+                        .allcoast4
+
+                        h3 Оптимальная (AMD):
+                        table.table4#ankor5
+                        .allcoast5
+
+                        h3 Оптимальная (Intel):
+                        table.table5#ankor6
+                        .allcoast6
 
             .newsR
                 img(src='/imgs/0.png', alt='news')
