--- a/src/pug/articles01.pug
+++ b/src/pug/articles01.pug
@@ -10,3 +10,4 @@ block content
 block body_end
   //- script(src='js/pc-db-01.js')
   script(src='js/pc-db-01-01.js')
+  //- script(src='js/localtring.js')
