--- a/src/pug/articles/pc-build-december-2019.pug
+++ b/src/pug/articles/pc-build-december-2019.pug
@@ -3,7 +3,7 @@ include ../mixins/breadcrumbs2
 section.pcMonth
     .wrapper
         .containers
-            +breadcrumb([['Домой', '/index.html'], ['Статьи', '/articles.html'], ['ПК сборка за декабрь 2019']])
+            +breadcrumb([['Домой', '/index.html'], ['Статьи', '/articles.html'], ['ПК сборка. Январь 2020']])
     .wrapper
         .containers.newsFlex
             .newsL
