--- a/src/pug/layouts/home.pug
+++ b/src/pug/layouts/home.pug
@@ -10,7 +10,10 @@ html
     link(rel='stylesheet', href='css/slider.css')
     script(type='text/javascript', src='js/modernizr.custom.28468.js')
     link(rel="stylesheet" href="css/main.min.css")
-    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125854662-1"></script>
+    <script src="js/metrik.js"></script>
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?159"></script>
+
     block head_end
 	
   body
@@ -20,11 +23,13 @@ html
     .content
       block content
 		
+    #vk_community_messages
     script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     //- script(type='text/javascript', src='js/preloader.js')
     script(type='text/javascript', src='js/nprogress.js')
     script(type='text/javascript', src='js/jquery.cslider.js')
     script(type='text/javascript', src='js/slider.js')
-    script(type='text/javascript', src='js/nprogress_01.js')
+    script(type='text/javascript', src='js/vk.js')
+    
 
     block body_end
